fix carousel controls not showing in desktop

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -372,11 +372,9 @@ footer {
         top: 0;
         width: 100%;
         height: 100%;
-        display: flex;
         align-items: center;
         justify-content: space-between;
         z-index: 1;
-        opacity: 0;
         display: none;
         transition: opacity 0.5s ease;
   
@@ -422,11 +420,12 @@ footer {
   }
 
   @include breakpoint(md) {
-    .carousel .tns-controls {
-      display: block;
-    }
-    
     .carousel {
+      .tns-outer .tns-controls {
+        display: flex;
+        opacity: 0;
+      }
+
       button[data-action="start"],
       button[data-action="stop"] {
         left: 45%;
